[Update] fixed side rule decoration alignment and set min-height on main page wrapper

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,6 +3,7 @@
 @use "../../../src/styles/typography" as *;
 
 #main-footer {
+  margin-top: auto;
   .footer-wrapper {
     display: flex;
     justify-content: space-between;
