--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -34,7 +34,7 @@
       height: 3px;
       bottom: 8px;
       width: 40px;
-      right: -60px;
+      right: -48px;
     }
   }
 
